<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_useravatar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/part1"
            android:contentDescription="@string/part1_of_going_insane">

        </ImageView>
        <!--android:scaleType="fitXY"-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/part2"
            android:contentDescription="@string/part2_of_going_insane">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/part3"
            android:contentDescription="@string/the_full_meme_of_going_insane">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="2"
            android:paddingVertical="20dp"
            android:text="@string/my_name_is_mozn"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:paddingVertical="20dp"
            android:layout_marginTop="12dp"
            android:textSize="30sp"
            android:text="@string/my_age_is_19"
            />

    </LinearLayout>





    <TextView
        android:id="@+id/linkedinLink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="all"
        android:linksClickable="true"
        android:padding="16dp"
        android:text="@string/https_www_linkedin_com_in_mozn_okasha_7b312b2b2_utm_source_share_utm_campaign_share_via_utm_content_profile_utm_medium_ios_app"
        android:textColor="@android:color/black"
        android:textSize="25sp" />






</LinearLayout>




